--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: mainFont;
+    src: url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
+}
+
 .menu-nav img, .menu-bottom img {
     width: 3%;
     height: 3%; 
