--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
-.sidebar img {
-    width: 1.5rem;
-}
+
 
 body {
     min-height: 100vh;
@@ -12,6 +10,7 @@ body {
     grid-template: auto 4fr / 1fr 4fr;
 }
 
+/* Header */
 .header {
     display: grid;
     grid-area: 1 / 2 / 2 / -1;
@@ -113,4 +112,48 @@ body {
     font-size: 1rem;
     border-radius: 20px;
     cursor: pointer;
+}
+
+/* Sidebar */
+.menu-icon {
+    width: 1.5rem;
+    cursor: pointer;
+}
+
+.sidebar {
+    grid-area: 1 / 1 / -1 / 2;
+    color: white;
+    background-color: #0093dd;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    padding: 1rem;
+}
+
+.sidebar .logo {
+    display: flex;
+    align-items: center;
+    min-width: 5rem;
+    gap: 0.5rem;
+}
+
+.sidebar .logo .logo-icon {
+    height: 3rem;
+    cursor: pointer;
+}
+
+.sidebar .logo h3 {
+    margin: 0;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.sidebar ul {
+    padding: 0;
+}
+
+.sidebar ul li {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
 }
