--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
     padding: 1rem 2rem;
 }
 
+.logo {
+    margin-bottom: 15px;
+}
+
 .searchbar-container {
     display: flex;
     align-items: center;
@@ -167,6 +171,25 @@ body {
 .content {
     background: #e7eff3;
     display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 1rem 2rem;
+    gap: 1rem;
+}
+
+.projects-container {
+    display: grid;
+    grid-template-rows: auto 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 2rem 1rem;
+}
+
+.projects-container > h4 {
+    font-size: 1.5rem;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    grid-column: 1 / -1;
+    margin-bottom: -1.5rem;
 }
 
 .action-block img {
