Add color side block to project tiles and text padding

--- a/style.css
+++ b/style.css
@@ -192,6 +192,23 @@ body {
     margin-bottom: -1.5rem;
 }
 
+.project {
+    border-radius: 12px;
+    background: white;
+    display: grid;
+    grid-template: 1fr auto / 1rem 1fr;
+}
+
+.text-block {
+    padding: 1rem 1rem 0;
+}
+
+.color-block {
+    grid-row: 1 / -1;
+    background-color: orange;
+    border-radius: 12px 0px 0px 12px;
+}
+
 .action-block img {
     height: 1.5rem;
     cursor: pointer;
