--- a/style.css
+++ b/style.css
@@ -199,6 +199,10 @@ body {
     grid-template: 1fr auto / 1rem 1fr;
 }
 
+.project h5 {
+    font-size: 1.2rem;
+}
+
 .text-block {
     padding: 1rem 1rem 0;
 }
@@ -207,6 +211,13 @@ body {
     grid-row: 1 / -1;
     background-color: orange;
     border-radius: 12px 0px 0px 12px;
+}
+
+.action-block {
+    display: flex;
+    justify-content: end;
+    gap: 1rem;
+    padding: 1rem;
 }
 
 .action-block img {
