--- a/style.css
+++ b/style.css
@@ -236,10 +236,9 @@ body {
     flex-direction: column;
 }
 
-.right-panels > div h4 {
+.right-panels h4 {
     font-size: 1.5rem;
     margin: 0;
-    margin-bottom: 0.5rem;
 }
 
 .announ-container, .trending {
@@ -253,7 +252,7 @@ body {
     padding: 1rem 2rem;
 }
 
-.announcement h6, .announcement p {
+.announcement h6 {
     margin: 0;
 }
 
